# fastapi-msgspec

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
fastapi_msgspec/: requests.py  responses.py  routing.py
tests/: test_msgspec_response_class.py  test_msgspec_route_class.py
